--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,26 @@ body{
     animation: animate1 1s linear infinite;
 }
 
+@keyframes animate1 {
+    0%{
+        left: -100%;
+    }
+    50%, 100%{
+        left: 100%;
+    }
+}
+.login-box a span:nth-child(2){
+    top: -100%;right: 0;
+    width: 2px;height: 100%;
+    background: linear-gradient(180deg, transparent, #03e9f4);
+    animation: animate2 1s linear infinite;
+    animation-delay: .25s;
+}
+@keyframes animate2 {
+    0%{
+        top: -100%;
+    }
+    50%, 100%{
+        top: 100%;
+    }
+}
