--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,35 @@ body{
         top: 100%;
     }
 }
+
+.login-box a span:nth-child(3){
+    right: -100%;bottom: 0;
+    height: 2px;width: 100%;
+    background: linear-gradient(270deg, transparent, #03e9f4);
+    animation: animate3 1s linear infinite;
+    animation-delay: .5s;
+}
+@keyframes animate3 {
+    0%{
+        right: -100%;
+    }
+    50%, 100%{
+        right: 100%;
+    }
+}
+.login-box a span:nth-child(4){
+    bottom: -100%;left: 0;
+    width: 2px;height: 100%;
+    background: linear-gradient(360deg, transparent, #03e9f4);
+    animation: animate4 1s linear infinite;
+    animation-delay: .75s;
+}
+
+@keyframes animate4 {
+    0%{
+        bottom: -100%;
+    }
+    50%, 100%{
+        bottom: 100%;
+    }
+}
